--- a/package.json
+++ b/package.json
@@ -12,14 +12,26 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "vue-tsc --noEmit",
-    "postinstall": "wxt prepare"
+    "postinstall": "wxt prepare",
+    "lint": "eslint . --ext .ts,.js --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@wxt-dev/module-vue": "^1.0.2",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^10.4.0",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "prettier": "^3.6.2",
     "typescript": "5.6.3",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.10",
     "wxt": "^0.20.6"
   }
